--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -7518,6 +7518,7 @@ i.show-calendar {
 i.show-calendar:before {
   content: '\e834';
   font-size: 18px;
+  padding: 0 6px;
 }
 i.show-calendar.selected {
   opacity: 0.6;
@@ -10580,7 +10581,17 @@ select {
 .filters p ul li i {
   border-radius: 50px;
 }
-/* ok icon */
+.week-switcher .date-picker-icon i.calendar:before {
+  font-size: 45px;
+}
+.filters .filters-icons li.selected:nth-child(6n + 4) .date-picker-icon i.calendar {
+  background: none;
+  box-shadow: none;
+}
+.date-picker-icon a {
+  position: relative;
+  text-align: right;
+}
 .date-picker-icon a i.calendar {
   font-family: "fontello";
   -webkit-font-smoothing: antialiased;
@@ -10595,7 +10606,6 @@ select {
 }
 .date-picker-icon a i.calendar:before {
   content: '\e834';
-  font-size: 45px;
 }
 .date-picker-icon a i.calendar:hover {
   opacity: 1;
@@ -10608,6 +10618,9 @@ select {
 }
 .week-switcher .date-picker-icon {
   margin-right: 8px;
+}
+.week-switcher .date-picker-icon i.calendar:before {
+  font-size: 45px;
 }
 article.preview {
   box-shadow: none;
